# easy_vitessce

./: .gitignore  MANIFEST.in  README.md  deploy.yml  mySpatialData.py  pyproject.toml
.github/workflows/: deploy.yml  test.yml
data/embedding_file.zarr/: .zmetadata
data/embedding_file.zarr/X/: .zarray  0.1  0.12  0.14  0.15  0.16  0.18  0.20  0.24  0.25  0.26  0.29  0.3  0.30  0.32  0.34  0.38  0.39  0.41  0.44  0.45  0.46  0.47  0.49  0.5  0.50  0.51  0.52  0.54  0.56  0.58  0.62  0.65  0.66  0.67  0.68  0.69  0.7  0.71  0.72  (+2 more)
data/embedding_file.zarr/obs/: .zattrs
data/embedding_file.zarr/obs/G2M_score/: .zarray
data/embedding_file.zarr/obs/S_score/: 0
data/embedding_file.zarr/obs/index/: 0
data/embedding_file.zarr/obs/louvain/codes/: 0
data/embedding_file.zarr/obs/n_counts/: 0
data/embedding_file.zarr/obs/n_genes/: .zarray  0
data/embedding_file.zarr/obs/phase/categories/: 0
data/embedding_file.zarr/obs/phase/codes/: .zarray
data/embedding_file.zarr/obsm/X_pca/: 0.0
data/embedding_file.zarr/obsm/X_tsne/: .zarray  0.0
data/embedding_file.zarr/obsm/X_umap/: .zarray  0.0
data/embedding_file.zarr/obsp/connectivities/data/: 0
data/embedding_file.zarr/obsp/connectivities/indices/: .zarray  0
data/embedding_file.zarr/obsp/connectivities/indptr/: .zarray
data/embedding_file.zarr/obsp/distances/data/: .zarray  0
data/embedding_file.zarr/obsp/distances/indices/: .zarray  0
data/embedding_file.zarr/raw/X/data/: 1  3
data/embedding_file.zarr/raw/X/indices/: 1  3
data/embedding_file.zarr/uns/louvain_colors/: .zarray
data/embedding_file.zarr/uns/pca/variance/: 0
docs/: conf.py  customization.rst  easy_vitessce.rst  index.rst  modules.rst
src/easy_vitessce/: VitessceSpatialData.py  __init__.py  configure_plots.py  configuring_plots.py  data.py  mySpatialData.py  spatialdata_plot.py  widget.py
src/easy_vitessce/docs/: conf.py  index.rst
src/easy_vitessce/docs/images/: desktop.ini
tests/: test_config.py
tests/data/embedding_file.zarr/X/: 0.0  0.10  0.11  0.13  0.17  0.19  0.2  0.21  0.22  0.23  0.27  0.28  0.31  0.33  0.35  0.36  0.37  0.4  0.40  0.42  0.43  0.48  0.53  0.55  0.57  0.59  0.6  0.60  0.61  0.63  0.64  0.70  0.75  0.76  0.8  0.9
tests/data/merfish.spatialdata.zarr/: zmetadata
tests/data/sdata.zarr/: zmetadata
(+61 files in other folders)
