[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "easy_vitessce"
version = "0.0.2"
authors = [
  {name="HIDIVE Lab"},
  {name="Selena Luo"}
]
description = "A package to easily use Vitessce to create interactive plots for single-cell data"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  'scipy>=1.2.1',
  'pandas>=1.1.2',
  'black>=21.11b1',
  'numpy>=1.21.2',
  'zarr>=2.5.0,<3',
  'numcodecs>=0.5.7,<0.16.0',
  'vitessce[all] >=3.7.3',
  'scanpy >= 1.11.3',
  'anndata >= 0.11.4',
  'spatialdata >= 0.3.0',
  "xarray>=2024.10.0,<=2025.3.0",
  'spatialdata-plot >= 0.2.7',
  'dask[dataframe]==2024.11.1',
  'distributed <= 2024.11.2',
  'donfig >= 0.3.1',
]

[project.optional-dependencies]
docs = [
  'sphinx',
  'sphinx-book-theme',
  'sphinx-copybutton'
]
dev = [
  'pytest>= 8.4.1',
  'jupyter',
  'jupyterlab'
]


[tool.setuptools]
packages = ["easy_vitessce"]
package-dir = {"" = "src"}

[project.urls]
repository = "https://github.com/vitessce/easy_vitessce"


# Reference: https://stackoverflow.com/a/50156706
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["--doctest-modules", "--verbose", "--ignore=docs"]
